fixed wheel css not showing on some sites issue

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   width: 36vh; /* 60% of wheel width */
   height: 100vh;
   overflow: hidden;
-  z-index: 1000;
+  z-index: 2147483647 ; /* to make wheel appear at top*/
 }
 
 /* The sliding popup */
